--- a/README.html
+++ b/README.html
@@ -48,14 +48,14 @@
         <h1 id="cloud-bites-tutorial">Cloud Bites Tutorial</h1>
 <p><img src = "media_sources/logo.png" width = "400" align="left"><br><br><br><br><br>
 This tutorial introduces the basics of application deployment in a cloud-native environment.<br>
-A simple website serves as a sample application and can be run as a container in various cloud environments. The sample application’s source code is part of the tutorial. The idea is to develop this tutorial continuously. Chapter 1 outlines the basics of container technology and the deployment and management of container applications. This first chapter consists of several parts that build on each other. Chapter 2 examines the ecosystem more broadly, discussing, for example, various projects from the [Cloud-Native Computing Foundation] (<a href="https://www.cncf.io/">https://www.cncf.io/</a>) cosmos.<br>
+A simple website serves as a sample application and can be run as a container in various cloud environments. The sample application’s source code is part of the tutorial. The idea is to develop this tutorial continuously. Chapter 1 outlines the basics of container technology and the deployment and management of container applications. This first chapter consists of several parts that build on each other. Chapter 2 examines the ecosystem more broadly, discussing, for example, various projects from the <a href="https://www.cncf.io/">Cloud-Native Computing Foundation</a> cosmos.<br>
 For simplicity, do not attempt this while using a corporate firewall. Comments, additions, and collaboration are welcome.</p>
 <hr>
 <h2 id="chapter-1---basics-of-container-technology-deployment-and-management-of-container-applications"><strong>Chapter 1 - Basics of container technology, deployment and management of container applications</strong></h2>
 <h3 id="1-setup-of-local-environment"><strong>1. Setup of local environment</strong></h3>
 <p>The tutorial provides a virtual machine (VM) to ensure a consistent development environment. This VM is deployed using <a href="https://www.vagrantup.com/">Vagrant</a>. Vagrant allows it to leverage a declarative configuration file that describes the required software, packages, and operating system configuration. The VM used in this tutorial is based on Ubuntu 20.04 LTS. The VM is allocated 1 vCPU and 4 GB of RAM.<br>
 We recommend <a href="https://www.virtualbox.org/">Virtualbox</a> as the virtualization software for this tutorial.<br>
-This tutorial uses [Visual Studio Code] (<a href="https://code.visualstudio.com/">https://code.visualstudio.com/</a>) as a code editor.</p>
+This tutorial uses <a href="https://code.visualstudio.com/">Visual Studio Code</a> as a code editor.</p>
 <p>After installing the three components (Vagrant, VirtualBox, and Visual Studio Code), the GitHub repository can be cloned, and the VM can be started:</p>
 <pre><code><code><div>git config --global core.autocrlf false
 git clone
@@ -69,7 +69,7 @@ vagrant up
 <pre><code><code><div>cd /vagrant
 </div></code></code></pre>
 <hr>
-<h3 id="2-build-and-run-docker-container-locally"><strong>2. Build and run Docker container locally</strong></h3>
+<h3 id="2-build-and-run-docker-containers-locally"><strong>2. Build and run Docker containers locally</strong></h3>
 <p>In this section, a container with the demo application is created first. This container is started locally can be reached via the host PC’s web browser.</p>
 <p>Switch to the directory:</p>
 <pre><code><code><div>cd cloud_bites_tutorial/1_2_app_sources
@@ -102,7 +102,7 @@ docker push &lt;dockerhub_username&gt;/&lt;image_name&gt;
 </div></code></code></pre>
 <hr>
 <h3 id="3-deploy-a-local-kubernetes-cluster-using-k3d"><strong>3. Deploy a local Kubernetes cluster using K3D</strong></h3>
-<p>In the following section you are going to use the <a href="https://k3d.io">K3D</a> project to locally deploy a minimal Kubernetes cluster. K3D is a lightweight wrapper to run <a href="https://k3s.io">K3S</a>, Rancher Lab’s minimal Kubernetes distribution, in Docker. K3D makes it very easy to create single- and multi-node K3S clusters in Docker, e.g. for local development on Kubernetes. A good introduction with some use cases can be found in the <a href="https://www.youtube.com/watch?v=mCesuGk-Fks">DevOps Toolkit YouTube video</a>.</p>
+<p>In the following section you are going to use the <a href="https://k3d.io">K3D</a> project to locally deploy a minimal Kubernetes cluster. K3D is a lightweight wrapper to run <a href="https://k3s.io">K3S</a>, Rancher Lab’s minimal Kubernetes distribution, in Docker. K3D makes it very easy to create single- and multi-node K3S clusters in Docker, e.g. for local development on Kubernetes. A good introduction to K3D with some use cases can be found in the <a href="https://www.youtube.com/watch?v=mCesuGk-Fks">DevOps Toolkit YouTube video</a>.</p>
 <p>Deploy a local K3D cluster with three control planes and three worker nodes:</p>
 <pre><code><code><div>k3d cluster create local-cluster --servers 3 --agents 3 -p &quot;8080:80@loadbalancer&quot;
 </div></code></code></pre>
